--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -87,7 +87,7 @@
             </div>
             <br><br>
             <div id="exportContainer">
-              <dx-button text="Exportar todos los grids" icon="xlsxfile" (onClick)="exportGrids($event)"></dx-button>
+              <dx-button text="EXPORTAR TODO" icon="xlsxfile" (onClick)="exportGrids($event)"></dx-button>
             </div>
             <br>
             <dx-tab-panel>
