--- a/src/app/pages/indicadores/indicadores.component.html
+++ b/src/app/pages/indicadores/indicadores.component.html
@@ -652,12 +652,12 @@
         </dxi-item>
 
         <dxi-item title="KPI´s">
-            <dx-chart id="chart1" [dataSource]="kmsXOperacion" palette="pastel" [rotated]="false">
+            <dx-chart id="chart1" [dataSource]="kmsXOperacion" palette="pastel" [rotated]="false" [barGroupWidth]="120">
                 <dxi-value-axis [maxValueMargin]=".15"></dxi-value-axis>
-                <dxo-common-series-settings argumentField="tipoOperacion" type="bar" valueField="valor">
+                <dxo-common-series-settings argumentField="tipoOperacion" type="bar" valueField="valor" [barWidth]="20">
                     <dxo-label [visible]="true" position="outside" [rotationAngle]="-90"
                      backgroundColor="transparent" [verticalOffset]="15">
-                        <dxo-font size="11" color="black" weight="bold"></dxo-font>
+                        <dxo-font size="12" color="black" weight="bold"></dxo-font>
                     </dxo-label>
                 </dxo-common-series-settings>
                 <dxo-series-template nameField="mes" [customizeSeries]="customizeSeries"></dxo-series-template>
@@ -667,12 +667,12 @@
             </dx-chart>
             <br><br>
 
-            <dx-chart id="chart2" [dataSource]="kmsXUdn" palette="pastel" [rotated]="false">
+            <dx-chart id="chart2" [dataSource]="kmsXUdn" palette="pastel" [rotated]="false" [barGroupWidth]="100">
                 <dxi-value-axis [maxValueMargin]=".15"></dxi-value-axis>
-                <dxo-common-series-settings argumentField="tipoOperacion" type="bar" valueField="valor">
+                <dxo-common-series-settings argumentField="tipoOperacion" type="bar" valueField="valor" [barPadding]="0.01">
                     <dxo-label [visible]="true" position="outside" [rotationAngle]="-90"
                      backgroundColor="transparent" [verticalOffset]="15">
-                        <dxo-font size="11" color="black" weight="bold"></dxo-font>
+                        <dxo-font size="12" color="black" weight="bold"></dxo-font>
                     </dxo-label>
                 </dxo-common-series-settings>
                 <dxo-series-template nameField="mes" [customizeSeries]="customizeSeries"></dxo-series-template>
@@ -682,12 +682,12 @@
             </dx-chart>
             <br><br>
 
-            <dx-chart id="chart3" [dataSource]="porXOperacion" palette="pastel" [rotated]="false">
+            <dx-chart id="chart3" [dataSource]="porXOperacion" palette="pastel" [rotated]="false" >
                 <dxi-value-axis [maxValueMargin]=".44"></dxi-value-axis>
-                <dxo-common-series-settings argumentField="tipoOperacion" type="bar" valueField="valor">
+                <dxo-common-series-settings argumentField="tipoOperacion" type="bar" valueField="valor" [barWidth]="20">
                     <dxo-label [visible]="true" position="outside" [customizeText]="formatSliderTooltip"
                      [rotationAngle]="-90" backgroundColor="transparent" [verticalOffset]="15">
-                        <dxo-font size="11" color="black" weight="bold"></dxo-font>
+                        <dxo-font size="12" color="black" weight="bold"></dxo-font>
                     </dxo-label>
                 </dxo-common-series-settings>
                 <dxo-series-template nameField="mes" [customizeSeries]="customizeSeries"></dxo-series-template>
@@ -697,12 +697,12 @@
             </dx-chart>
             <br><br>
 
-            <dx-chart id="chart4" [dataSource]="porXCargadosUdn" palette="pastel" [rotated]="false">
+            <dx-chart id="chart4" [dataSource]="porXCargadosUdn" palette="pastel" [rotated]="false" >
                 <dxi-value-axis [maxValueMargin]=".15"></dxi-value-axis>
-                <dxo-common-series-settings argumentField="tipoOperacion" type="bar" valueField="valor">
+                <dxo-common-series-settings argumentField="tipoOperacion" type="bar" valueField="valor" [barWidth]="20">
                     <dxo-label [visible]="true" position="outside" [customizeText]="formatSliderTooltip"
                      [rotationAngle]="-90" backgroundColor="transparent" [verticalOffset]="15">
-                        <dxo-font size="11" color="black" weight="bold"></dxo-font>
+                        <dxo-font size="12" color="black" weight="bold"></dxo-font>
                     </dxo-label>
                 </dxo-common-series-settings>
                 <dxo-series-template nameField="mes" [customizeSeries]="customizeSeries"></dxo-series-template>
@@ -714,10 +714,10 @@
 
             <dx-chart id="chart5" [dataSource]="porXFlotaOperacion" palette="pastel" [rotated]="false">
                 <dxi-value-axis [maxValueMargin]=".44"></dxi-value-axis>
-                <dxo-common-series-settings argumentField="tipoOperacion" type="bar" valueField="valor">
+                <dxo-common-series-settings argumentField="tipoOperacion" type="bar" valueField="valor" [barWidth]="20">
                     <dxo-label [visible]="true" position="outside" [customizeText]="formatSliderTooltip"
                      [rotationAngle]="-90" backgroundColor="transparent" [verticalOffset]="15">
-                        <dxo-font size="11" color="black" weight="bold"></dxo-font>
+                        <dxo-font size="12" color="black" weight="bold"></dxo-font>
                     </dxo-label>
                 </dxo-common-series-settings>
                 <dxo-series-template nameField="mes" [customizeSeries]="customizeSeries"></dxo-series-template>
@@ -729,10 +729,10 @@
 
             <dx-chart id="chart6" [dataSource]="porXFlotaUdn" palette="pastel" [rotated]="false">
                 <dxi-value-axis [maxValueMargin]=".15"></dxi-value-axis>
-                <dxo-common-series-settings argumentField="tipoOperacion" type="bar" valueField="valor">
+                <dxo-common-series-settings argumentField="tipoOperacion" type="bar" valueField="valor" [barWidth]="20">
                     <dxo-label [visible]="true" position="outside" [customizeText]="formatSliderTooltip"
                      [rotationAngle]="-90" backgroundColor="transparent" [verticalOffset]="15">
-                        <dxo-font size="11" color="black" weight="bold"></dxo-font>
+                        <dxo-font size="12" color="black" weight="bold"></dxo-font>
                     </dxo-label>
                 </dxo-common-series-settings>
                 <dxo-series-template nameField="mes" [customizeSeries]="customizeSeries"></dxo-series-template>
